@@ -1,4 +1,4 @@
-# fatal-signal.m4 serial 1
+# fatal-signal.m4 serial 2
 dnl Copyright (C) 2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
@@ -9,6 +9,7 @@ dnl the same distribution terms as the rest of that program.
 AC_DEFUN([gl_FATAL_SIGNAL],
 [
   AC_REQUIRE([gt_SIGNALBLOCKING])
+  AC_REQUIRE([gt_TYPE_SIG_ATOMIC_T])
   AC_CHECK_HEADERS_ONCE(unistd.h)
   AC_CHECK_FUNCS(raise)
 ])
